WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138407
Fix build warning in SVGMarkerElement.cpp
https://bugs.webkit.org/show_bug.cgi?id=138407
Summary
Fix build warning in SVGMarkerElement.cpp
Sanghyup Lee
Reported
2014-11-04 23:53:50 PST
../../Source/WebCore/svg/SVGMarkerElement.cpp:256:55: warning: comparison of unsigned expression >= 0 is always true [-Wtype-limits] ASSERT(wrapper->currentAnimatedValue() >= 0 && wrapper->currentAnimatedValue() < SVGMarkerOrientMax);
Attachments
Patch
(1.63 KB, patch)
2014-11-04 23:59 PST
,
Sanghyup Lee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sanghyup Lee
Comment 1
2014-11-04 23:59:37 PST
Created
attachment 241005
[details]
Patch
Csaba Osztrogonác
Comment 2
2014-11-05 05:50:00 PST
***
Bug 138414
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 3
2014-11-05 09:04:26 PST
***
Bug 138416
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 4
2014-11-05 09:42:37 PST
Comment on
attachment 241005
[details]
Patch Clearing flags on attachment: 241005 Committed
r175623
: <
http://trac.webkit.org/changeset/175623
>
WebKit Commit Bot
Comment 5
2014-11-05 09:42:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug