Fix build warning in SVGMarkerElement.cpp https://bugs.webkit.org/show_bug.cgi?id=138407

Patch by Sanghyup Lee <sh53.lee@samsung.com> on 2014-11-05
Reviewed by Darin Adler.

Build warning in debug cause 'comparison of unsigned expression >= 0 is always true [-Wtype-limits]'

* svg/SVGMarkerElement.cpp:
(WebCore::SVGMarkerElement::orientType): Removed useless condition in ASSERT.

Canonical link: https://commits.webkit.org/156243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175623 268f45cc-cd09-0410-ab3c-d52691b4dbfc